# uglify-glsl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  license.h  main.cpp
test/shaders/: simple.frag
